Separate two different button resets to avoid too much specificity
 - Taking a look at https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css#L188, I think we should separate the style reset from the iOS Safari reset.  I don't think we need to target the style reset of background-image and background-color to [type=] as well as button.
 - This will make it so using tailwind with other libraries is a bit simpler than before, since the specificity  of [type=X] is fairly high compared to other selectors.

--- a/src/css/preflight.css
+++ b/src/css/preflight.css
@@ -177,17 +177,23 @@ select {
 }
 
 /*
-1. Correct the inability to style clickable types in iOS and Safari.
-2. Remove default button styles.
+Correct the inability to style clickable types in iOS and Safari.
 */
 
 button,
 [type='button'],
 [type='reset'],
 [type='submit'] {
-  -webkit-appearance: button; /* 1 */
-  background-color: transparent; /* 2 */
-  background-image: none; /* 2 */
+  -webkit-appearance: button;
+}
+
+/*
+Remove default button styles.
+*/
+
+button {
+  background-color: transparent;
+  background-image: none;
 }
 
 /*
